[gd_scene load_steps=6 format=3 uid="uid://dhl5vpxl6tnur"]

[ext_resource type="Texture2D" uid="uid://dwkqq0vvjc80s" path="res://Assets/Images/Dungeon.png" id="1_irwrb"]
[ext_resource type="Script" path="res://Scripts/game_over.gd" id="1_phla6"]
[ext_resource type="AudioStream" uid="uid://dx22fqk0wxg2q" path="res://Assets/Audio/Buttons/click-button-140881.mp3" id="3_p1ehk"]
[ext_resource type="AudioStream" uid="uid://b7mbf2bvw74pv" path="res://Assets/Audio/Buttons/button.mp3" id="4_ahhef"]
[ext_resource type="AudioStream" uid="uid://0xmmtyski4al" path="res://Assets/Audio/defeat.wav" id="5_kxjlk"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_phla6")

[node name="Dungeon" type="Sprite2D" parent="."]
position = Vector2(45, 43.75)
scale = Vector2(1, 1.46562)
texture = ExtResource("1_irwrb")

[node name="GameoverLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -24.5
offset_top = 11.0
offset_right = 24.5
offset_bottom = 37.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 12
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="DeathLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.5
offset_top = -41.0
offset_right = 24.5
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 7
text = "You have died,,,"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="LevelLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = -7.0
offset_right = 36.0
offset_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 7
text = "Current level: "
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 103.0
offset_right = -5.0
offset_bottom = -28.0
grow_horizontal = 2
grow_vertical = 2

[node name="RestartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "RESTART LEVEL"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "QUIT GAME"

[node name="ButtonSfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_p1ehk")
volume_db = -10.0
pitch_scale = 8.0

[node name="SelectSfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_ahhef")
volume_db = -8.0

[node name="Defeat" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_kxjlk")
volume_db = -9.0
autoplay = true

[connection signal="mouse_entered" from="VBoxContainer/RestartButton" to="." method="_on_restart_button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
